--- a/wp-content/themes/zts-india/resources/scss/pages/_homepage.scss
+++ b/wp-content/themes/zts-india/resources/scss/pages/_homepage.scss
@@ -1,6 +1,11 @@
 .hero-banner {
 	position: relative;
 	padding: 80px 0;
+	.container {
+		@media screen and (min-width: 1600px) {
+			position: relative;
+		}
+	}
 
 	.banner-content {
 		display: flex;
@@ -64,6 +69,9 @@
 		min-height: 500px;
 		height: calc(100% - 40px);
 
+		@media screen and (min-width: 1600px) {
+			top: -80px;
+		}
 		@media screen and (max-width: 1299px) {
 			width: 45%;
 		}
@@ -280,7 +288,7 @@
 
 		.clients-slider {
 			.client-logo {
-				padding: 0 15px;
+				padding: 0 15px;				
 
 				a {
 					display: block;
@@ -350,6 +358,10 @@
 	.company-stats {
 		padding-left: 45px;
 		padding-right: 15px;
+
+		@media screen and (min-width: 1600px) {
+			padding-right: calc((100vw - 1285px) / 2);
+		}
 
 		@include breakpoint(medium) {
 			padding: 35px 0 0;
@@ -642,8 +654,16 @@
 }
 
 .why-choose-us {
+	@media screen and (min-width: 1600px) {
+		padding-bottom: 0;
+	}
 	.container-wrapper {
 		padding-right: calc((100vw - 1270px) / 2);
+		@media screen and (min-width: 1600px) {
+			padding: 0 15px;
+			max-width: 1270px;
+			margin: 0 auto;
+		}
 		@include breakpoint(medium) {
 			padding: 0 15px;
 		}
@@ -702,6 +722,11 @@
 .faq-section {
 	.container-wrapper {
 		padding-left: calc((100vw - 1270px) / 2);
+		@media screen and (min-width: 1600px) {
+			padding: 0 15px;
+			max-width: 1270px;
+			margin: 0 auto;
+		}
 	}
 
 	.row {
