--- a/wp-content/themes/zts-india/resources/scss/pages/_services.scss
+++ b/wp-content/themes/zts-india/resources/scss/pages/_services.scss
@@ -430,7 +430,7 @@
                 display: flex;
                 align-items: center;
 
-                h3 {
+                h3, h4, p {
                     padding-right: 30px;
                     font-weight: 400;
                     color: #222222;
